--- a/Iosapp/insightTEK/insightTEK/Base.lproj/Main.storyboard
+++ b/Iosapp/insightTEK/insightTEK/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,11 +24,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" red="0.92941176469999998" green="0.51764705879999995" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="resultCell" rowHeight="36" id="mzV-Ql-2WC">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="36"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="resultCell" rowHeight="107" id="mzV-Ql-2WC">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="107"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mzV-Ql-2WC" id="4e8-bO-9Rg">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="35.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="106.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" red="0.92941176469999998" green="0.51764705879999995" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                         </tableViewCellContentView>
@@ -139,36 +140,53 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" red="0.92941176470588238" green="0.51764705882352935" blue="0.32941176470588235" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="181" id="aLw-gf-ksn">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="homeCell" rowHeight="181" id="aLw-gf-ksn">
                                         <rect key="frame" x="0.0" y="28" width="375" height="181"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aLw-gf-ksn" id="3qL-AO-ump">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="180.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Join our team of motivated mentors, and schools in the common goal of inspiring the kids!" translatesAutoresizingMaskIntoConstraints="NO" id="yTI-Q7-hME">
-                                                    <rect key="frame" x="21" y="103" width="332" height="76"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="textColor" red="0.22635236382484436" green="0.38662418723106384" blue="0.5567200779914856" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Inspire!" translatesAutoresizingMaskIntoConstraints="NO" id="jGg-Zn-72f">
-                                                    <rect key="frame" x="21" y="75" width="109" height="39"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="textColor" red="0.22635236382484436" green="0.38662418723106384" blue="0.5567200779914856" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="insightTEK" translatesAutoresizingMaskIntoConstraints="NO" id="sVd-m4-8kd">
-                                                    <rect key="frame" x="67" y="0.0" width="240" height="67"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="insightTEK" translatesAutoresizingMaskIntoConstraints="NO" id="sVd-m4-8kd">
+                                                    <rect key="frame" x="67" y="0.0" width="240" height="75"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="75" id="i5X-Nu-Zbv"/>
+                                                    </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Join our team of motivated mentors, and schools in the common goal of inspiring the kids!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oo3-m3-dGt">
+                                                    <rect key="frame" x="0.0" y="111" width="375" height="52"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="52" id="mUE-PN-gkX"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.22745098039215686" green="0.38823529411764707" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inspire!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WI0-t3-Ujr">
+                                                    <rect key="frame" x="23" y="80" width="57" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="2tW-WP-SNy"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.22745098039215686" green="0.38823529411764707" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="WI0-t3-Ujr" firstAttribute="top" secondItem="sVd-m4-8kd" secondAttribute="bottom" constant="5" id="5Nr-mo-H7C"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WI0-t3-Ujr" secondAttribute="trailingMargin" id="Fyw-ex-wuB"/>
+                                                <constraint firstItem="WI0-t3-Ujr" firstAttribute="leading" secondItem="3qL-AO-ump" secondAttribute="leadingMargin" constant="8" id="G8O-eg-VnG"/>
+                                                <constraint firstAttribute="trailing" secondItem="Oo3-m3-dGt" secondAttribute="trailing" id="O0l-Hm-az5"/>
+                                                <constraint firstItem="Oo3-m3-dGt" firstAttribute="top" secondItem="WI0-t3-Ujr" secondAttribute="bottom" constant="10" id="Xcb-vf-ZgF"/>
+                                                <constraint firstItem="sVd-m4-8kd" firstAttribute="top" secondItem="3qL-AO-ump" secondAttribute="top" id="iwd-fl-evQ"/>
+                                                <constraint firstItem="Oo3-m3-dGt" firstAttribute="leading" secondItem="3qL-AO-ump" secondAttribute="leading" id="m3X-cq-0mn"/>
+                                                <constraint firstAttribute="trailing" secondItem="sVd-m4-8kd" secondAttribute="trailing" constant="68" id="pOY-7t-Vk6"/>
+                                                <constraint firstItem="sVd-m4-8kd" firstAttribute="leading" secondItem="3qL-AO-ump" secondAttribute="leading" constant="67" id="uSE-Zb-l47"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.92941176469999998" green="0.51764705879999995" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="185" id="6bE-hB-iap">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="pictureCell" rowHeight="185" id="6bE-hB-iap">
                                         <rect key="frame" x="0.0" y="209" width="375" height="185"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6bE-hB-iap" id="7o6-qr-i2r">
@@ -183,7 +201,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.92941176469999998" green="0.51764705879999995" blue="0.3294117647" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="135" id="rrJ-sL-2HO">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="descCell" rowHeight="135" id="rrJ-sL-2HO">
                                         <rect key="frame" x="0.0" y="394" width="375" height="135"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rrJ-sL-2HO" id="fDH-EZ-k32">
@@ -194,7 +212,7 @@
                                                     <rect key="frame" x="26" y="22" width="324" height="100"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <string key="text">If you are a mentor, sign up to find a school near you. If you're a participating school, sign up to find mentors that are right for you</string>
-                                                    <color key="textColor" red="0.22635236382484436" green="0.38662418723106384" blue="0.5567200779914856" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="textColor" red="0.22745098039215686" green="0.38823529411764707" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
@@ -211,11 +229,18 @@
                             <constraint firstItem="jko-CC-Kue" firstAttribute="top" secondItem="C6O-QH-SgH" secondAttribute="top" id="30z-l7-LkO"/>
                             <constraint firstItem="C6O-QH-SgH" firstAttribute="trailing" secondItem="jko-CC-Kue" secondAttribute="trailing" id="Blv-Ry-rP7"/>
                             <constraint firstItem="C6O-QH-SgH" firstAttribute="bottom" secondItem="jko-CC-Kue" secondAttribute="bottom" id="EY8-xq-JLG"/>
+                            <constraint firstItem="jko-CC-Kue" firstAttribute="bottom" secondItem="C6O-QH-SgH" secondAttribute="bottom" id="HwB-Yp-QdM"/>
+                            <constraint firstItem="jko-CC-Kue" firstAttribute="trailing" secondItem="C6O-QH-SgH" secondAttribute="trailing" id="LDv-FP-Sgl"/>
+                            <constraint firstItem="jko-CC-Kue" firstAttribute="leading" secondItem="C6O-QH-SgH" secondAttribute="leading" id="WSc-0T-Jec"/>
                             <constraint firstItem="jko-CC-Kue" firstAttribute="leading" secondItem="C6O-QH-SgH" secondAttribute="leading" id="Y52-fe-mFL"/>
+                            <constraint firstItem="jko-CC-Kue" firstAttribute="top" secondItem="C6O-QH-SgH" secondAttribute="top" id="hkl-uR-DUf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="C6O-QH-SgH"/>
                     </view>
                     <navigationItem key="navigationItem" id="FMn-qQ-bz4"/>
+                    <connections>
+                        <outlet property="homeTableView" destination="jko-CC-Kue" id="enM-VF-4u3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="goX-EA-HIB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
